# paimon

./: README.md  agent_runner.py  audit_log.py  demo.py  orchestrator.py  provider_adapter.py  pyproject.toml  schemas.py  task_manager.py  tool_sandbox.py  workspace_store.py
agent_apps/vulnhelper/: app.py
agent_apps/vulnhelper/agents/: analyst.py  executor.py  factory.py  planner.py  prompt_injection.py
agent_apps/vulnhelper/application/: orchestrator.py  request_router.py
agent_apps/vulnhelper/prompts/: analyst_system.txt  executor_system.txt  planner_system.txt
agent_apps/vulnhelper/subagents/: analyst.json  executor.json  planner.json
agent_apps/vulnhelper/tests/: test_orchestrator.py  test_planner.py  test_thinking_printer.py
agentsdk/tests/: test_openai_adapter.py
doc/: agentsdk 功能说明.md  agentsdk 开发者参考.md  agentsdk方向.txt  jihua.md
docs/: README.md  paimonsdk 功能说明.md  paimonsdk 开发者参考.md  paimonsdk 路线图 v1.md  概要设计.md  详细设计.md
examples/: chat_demo.py  config.json
scripts/: smoke_openai.py
src/paimonsdk/: __init__.py
src/paimonsdk/adapters/: __init__.py  _openai_common.py  openai_adapter.py  openai_chatcompletions.py  openai_responses.py
src/paimonsdk/runtime/: __init__.py  agent.py  config.py  errors.py  events.py  loop.py  models.py  (+6 more)
tests/: __init__.py  test_agent_lifecycle.py  test_continue_semantics.py  test_event_protocol.py  test_openai_adapter.py  test_phase1_phase2.py  test_phase3_phase4.py  test_session_checkpoint.py  test_stream_handler.py  test_tool_contract.py  test_tool_executor_parallel.py  test_tool_executor_sequential.py
(+1 files in other folders)
